--- a/Adaptive Weather/Base.lproj/Main.storyboard
+++ b/Adaptive Weather/Base.lproj/Main.storyboard
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina4_0" orientation="portrait">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="ipad9_7" orientation="landscape">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -18,18 +20,18 @@
                         <viewControllerLayoutGuide type="bottom" id="pGZ-Fn-Zpw"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cloud_small" translatesAutoresizingMaskIntoConstraints="NO" id="Na9-2T-LdJ">
-                                <rect key="frame" x="10" y="20" width="300" height="227"/>
+                                <rect key="frame" x="362" y="20" width="300" height="307"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Yb0-h6-ixF" userLabel="TextContainer">
-                                <rect key="frame" x="0.0" y="267" width="320" height="301"/>
+                                <rect key="frame" x="0.0" y="347" width="1024" height="421"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bothell" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.40000000000000002" translatesAutoresizingMaskIntoConstraints="NO" id="YwR-Ey-i8q">
-                                        <rect key="frame" x="0.0" y="10" width="320" height="84"/>
+                                        <rect key="frame" x="0.0" y="10" width="1024" height="179.5"/>
                                         <fontDescription key="fontDescription" type="system" weight="thin" pointSize="150"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
@@ -38,7 +40,7 @@
                                         </variation>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" insetsLayoutMarginsFromSafeArea="NO" text="13C" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="TFv-Kb-AFR">
-                                        <rect key="frame" x="0.0" y="131" width="320" height="180"/>
+                                        <rect key="frame" x="0.0" y="132.5" width="1024" height="298.5"/>
                                         <fontDescription key="fontDescription" type="system" weight="thin" pointSize="250"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
@@ -62,13 +64,41 @@
                         <constraints>
                             <constraint firstItem="Yb0-h6-ixF" firstAttribute="top" secondItem="Na9-2T-LdJ" secondAttribute="bottom" constant="20" id="8XS-dE-8Y2"/>
                             <constraint firstAttribute="trailing" secondItem="Yb0-h6-ixF" secondAttribute="trailing" id="BPK-cP-UFy"/>
+                            <constraint firstItem="Yb0-h6-ixF" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.5" id="Bds-UT-JcA"/>
+                            <constraint firstItem="Yb0-h6-ixF" firstAttribute="top" secondItem="ptW-i6-bK7" secondAttribute="bottom" id="Dag-jh-CPm"/>
+                            <constraint firstItem="Na9-2T-LdJ" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="10" id="Pq2-4B-dgJ"/>
                             <constraint firstItem="Yb0-h6-ixF" firstAttribute="bottom" secondItem="8bC-Xf-vdC" secondAttribute="bottom" id="Q4C-ro-Bki"/>
                             <constraint firstItem="Yb0-h6-ixF" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Swb-io-CDr"/>
+                            <constraint firstItem="Na9-2T-LdJ" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.45" id="Tw8-Jg-WP1"/>
                             <constraint firstItem="Yb0-h6-ixF" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="cCL-0P-yId"/>
                             <constraint firstItem="Na9-2T-LdJ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="cHL-0j-rFg"/>
+                            <constraint firstItem="Na9-2T-LdJ" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="lUX-Pa-8b7"/>
                             <constraint firstItem="Na9-2T-LdJ" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.4" id="nLs-D2-Rkc"/>
                             <constraint firstItem="Na9-2T-LdJ" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="20" id="wfJ-Zj-yxl"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="Pq2-4B-dgJ"/>
+                                <exclude reference="Tw8-Jg-WP1"/>
+                                <exclude reference="lUX-Pa-8b7"/>
+                                <exclude reference="Bds-UT-JcA"/>
+                                <exclude reference="Dag-jh-CPm"/>
+                            </mask>
+                        </variation>
+                        <variation key="heightClass=compact">
+                            <mask key="constraints">
+                                <include reference="Pq2-4B-dgJ"/>
+                                <include reference="Tw8-Jg-WP1"/>
+                                <exclude reference="cHL-0j-rFg"/>
+                                <include reference="lUX-Pa-8b7"/>
+                                <exclude reference="nLs-D2-Rkc"/>
+                                <exclude reference="wfJ-Zj-yxl"/>
+                                <exclude reference="8XS-dE-8Y2"/>
+                                <include reference="Bds-UT-JcA"/>
+                                <include reference="Dag-jh-CPm"/>
+                                <exclude reference="cCL-0P-yId"/>
+                            </mask>
+                        </variation>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
