--- a/Adaptive Weather/Base.lproj/Main.storyboard
+++ b/Adaptive Weather/Base.lproj/Main.storyboard
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina4_0" orientation="portrait">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina5_5" orientation="landscape">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -18,18 +19,14 @@
                         <viewControllerLayoutGuide type="bottom" id="pGZ-Fn-Zpw"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="736" height="414"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cloud_small" translatesAutoresizingMaskIntoConstraints="NO" id="Na9-2T-LdJ">
-                                <rect key="frame" x="10" y="20" width="300" height="227"/>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Yb0-h6-ixF" userLabel="TextContainer">
-                                <rect key="frame" x="0.0" y="267" width="320" height="301"/>
+                                <rect key="frame" x="334.33333333333326" y="0.0" width="401.66666666666674" height="414"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bothell" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.40000000000000002" translatesAutoresizingMaskIntoConstraints="NO" id="YwR-Ey-i8q">
-                                        <rect key="frame" x="0.0" y="10" width="320" height="84"/>
+                                        <rect key="frame" x="0.0" y="10" width="401.66666666666669" height="179.66666666666666"/>
                                         <fontDescription key="fontDescription" type="system" weight="thin" pointSize="150"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
@@ -38,7 +35,10 @@
                                         </variation>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" insetsLayoutMarginsFromSafeArea="NO" text="13C" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="TFv-Kb-AFR">
-                                        <rect key="frame" x="0.0" y="131" width="320" height="180"/>
+                                        <rect key="frame" x="0.0" y="204" width="401.66666666666669" height="220"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="220" id="AA1-KB-xzD"/>
+                                        </constraints>
                                         <fontDescription key="fontDescription" type="system" weight="thin" pointSize="250"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
@@ -51,29 +51,83 @@
                                 <constraints>
                                     <constraint firstItem="TFv-Kb-AFR" firstAttribute="bottom" secondItem="Yb0-h6-ixF" secondAttribute="bottom" constant="10" id="Jjo-0q-tTU"/>
                                     <constraint firstItem="YwR-Ey-i8q" firstAttribute="width" secondItem="Yb0-h6-ixF" secondAttribute="width" id="O32-Ll-LoA"/>
-                                    <constraint firstItem="YwR-Ey-i8q" firstAttribute="centerX" secondItem="Yb0-h6-ixF" secondAttribute="centerX" id="fw6-iU-EY1"/>
+                                    <constraint firstItem="YwR-Ey-i8q" firstAttribute="leading" secondItem="TFv-Kb-AFR" secondAttribute="leading" id="ORB-UL-FXz"/>
                                     <constraint firstItem="TFv-Kb-AFR" firstAttribute="centerX" secondItem="Yb0-h6-ixF" secondAttribute="centerX" id="k7a-0A-TDy"/>
                                     <constraint firstItem="TFv-Kb-AFR" firstAttribute="width" secondItem="Yb0-h6-ixF" secondAttribute="width" id="ohi-uM-3QJ"/>
                                     <constraint firstItem="YwR-Ey-i8q" firstAttribute="top" secondItem="Yb0-h6-ixF" secondAttribute="top" constant="10" id="pwe-f1-Wrc"/>
+                                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="YwR-Ey-i8q" secondAttribute="trailing" constant="5.6843418860808015e-14" id="tn7-03-yKi"/>
                                 </constraints>
                             </view>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cloud_small" translatesAutoresizingMaskIntoConstraints="NO" id="Na9-2T-LdJ">
+                                <rect key="frame" x="-120" y="87" width="600" height="150"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="600" id="w5Q-zs-vbL"/>
+                                    <constraint firstAttribute="height" constant="150" id="xjj-wY-AKu"/>
+                                </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="w5Q-zs-vbL"/>
+                                        <exclude reference="xjj-wY-AKu"/>
+                                    </mask>
+                                </variation>
+                                <variation key="heightClass=compact">
+                                    <mask key="constraints">
+                                        <include reference="xjj-wY-AKu"/>
+                                    </mask>
+                                </variation>
+                                <variation key="widthClass=regular">
+                                    <mask key="constraints">
+                                        <include reference="w5Q-zs-vbL"/>
+                                    </mask>
+                                </variation>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="0.29019607843137252" green="0.6705882352941176" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="Yb0-h6-ixF" firstAttribute="top" secondItem="Na9-2T-LdJ" secondAttribute="bottom" constant="20" id="8XS-dE-8Y2"/>
                             <constraint firstAttribute="trailing" secondItem="Yb0-h6-ixF" secondAttribute="trailing" id="BPK-cP-UFy"/>
+                            <constraint firstItem="Yb0-h6-ixF" firstAttribute="top" secondItem="ptW-i6-bK7" secondAttribute="bottom" id="Cxq-M3-Ar4"/>
+                            <constraint firstItem="Yb0-h6-ixF" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="trailing" constant="4.3300000000000001" id="Mw3-rs-mbR">
+                                <variation key="heightClass=compact" constant="-401.66666666666674"/>
+                            </constraint>
                             <constraint firstItem="Yb0-h6-ixF" firstAttribute="bottom" secondItem="8bC-Xf-vdC" secondAttribute="bottom" id="Q4C-ro-Bki"/>
                             <constraint firstItem="Yb0-h6-ixF" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Swb-io-CDr"/>
+                            <constraint firstItem="pGZ-Fn-Zpw" firstAttribute="top" secondItem="Na9-2T-LdJ" secondAttribute="bottom" constant="50" id="Wxb-uC-6Wd">
+                                <variation key="heightClass=compact" constant="177"/>
+                            </constraint>
                             <constraint firstItem="Yb0-h6-ixF" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="cCL-0P-yId"/>
-                            <constraint firstItem="Na9-2T-LdJ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="cHL-0j-rFg"/>
+                            <constraint firstItem="Na9-2T-LdJ" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="120" id="cHL-0j-rFg">
+                                <variation key="heightClass=compact" constant="-120"/>
+                                <variation key="heightClass=regular-widthClass=compact" constant="50"/>
+                            </constraint>
                             <constraint firstItem="Na9-2T-LdJ" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.4" id="nLs-D2-Rkc"/>
-                            <constraint firstItem="Na9-2T-LdJ" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="20" id="wfJ-Zj-yxl"/>
+                            <constraint firstItem="Na9-2T-LdJ" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="30" id="wfJ-Zj-yxl"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="Cxq-M3-Ar4"/>
+                                <exclude reference="Mw3-rs-mbR"/>
+                                <exclude reference="Wxb-uC-6Wd"/>
+                            </mask>
+                        </variation>
+                        <variation key="heightClass=compact">
+                            <mask key="constraints">
+                                <exclude reference="nLs-D2-Rkc"/>
+                                <exclude reference="wfJ-Zj-yxl"/>
+                                <exclude reference="8XS-dE-8Y2"/>
+                                <include reference="Cxq-M3-Ar4"/>
+                                <include reference="Mw3-rs-mbR"/>
+                                <exclude reference="Swb-io-CDr"/>
+                                <exclude reference="cCL-0P-yId"/>
+                                <include reference="Wxb-uC-6Wd"/>
+                            </mask>
+                        </variation>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53.87323943661972" y="26.25"/>
+            <point key="canvasLocation" x="53.804347826086961" y="26.086956521739133"/>
         </scene>
     </scenes>
     <resources>
