--- a/Adaptive Weather/Base.lproj/Main.storyboard
+++ b/Adaptive Weather/Base.lproj/Main.storyboard
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina4_0" orientation="portrait">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -18,27 +19,40 @@
                         <viewControllerLayoutGuide type="bottom" id="pGZ-Fn-Zpw"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cloud_small" translatesAutoresizingMaskIntoConstraints="NO" id="Na9-2T-LdJ">
-                                <rect key="frame" x="10" y="20" width="300" height="227"/>
+                                <rect key="frame" x="37.5" y="20" width="300" height="267"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Yb0-h6-ixF" userLabel="TextContainer">
-                                <rect key="frame" x="0.0" y="267" width="320" height="301"/>
+                                <rect key="frame" x="0.0" y="307" width="375" height="360"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bothell" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.40000000000000002" translatesAutoresizingMaskIntoConstraints="NO" id="YwR-Ey-i8q">
-                                        <rect key="frame" x="0.0" y="10" width="320" height="84"/>
-                                        <fontDescription key="fontDescription" type="system" weight="thin" pointSize="150"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" text="Bothell" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.40000000000000002" translatesAutoresizingMaskIntoConstraints="NO" id="YwR-Ey-i8q">
+                                        <rect key="frame" x="0.0" y="10" width="375" height="113.5"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="145" id="eAS-am-LwH"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" weight="thin" pointSize="170"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
+                                        <variation key="default">
+                                            <mask key="constraints">
+                                                <exclude reference="eAS-am-LwH"/>
+                                            </mask>
+                                        </variation>
+                                        <variation key="heightClass=compact">
+                                            <mask key="constraints">
+                                                <include reference="eAS-am-LwH"/>
+                                            </mask>
+                                        </variation>
                                         <variation key="widthClass=compact">
-                                            <fontDescription key="fontDescription" type="system" weight="thin" pointSize="70"/>
+                                            <fontDescription key="fontDescription" type="system" weight="thin" pointSize="95"/>
                                         </variation>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" insetsLayoutMarginsFromSafeArea="NO" text="13C" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="TFv-Kb-AFR">
-                                        <rect key="frame" x="0.0" y="131" width="320" height="180"/>
+                                        <rect key="frame" x="0.0" y="190.5" width="375" height="179.5"/>
                                         <fontDescription key="fontDescription" type="system" weight="thin" pointSize="250"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
@@ -62,13 +76,38 @@
                         <constraints>
                             <constraint firstItem="Yb0-h6-ixF" firstAttribute="top" secondItem="Na9-2T-LdJ" secondAttribute="bottom" constant="20" id="8XS-dE-8Y2"/>
                             <constraint firstAttribute="trailing" secondItem="Yb0-h6-ixF" secondAttribute="trailing" id="BPK-cP-UFy"/>
+                            <constraint firstItem="Yb0-h6-ixF" firstAttribute="leading" secondItem="Na9-2T-LdJ" secondAttribute="trailing" constant="20" id="KB7-12-nf5"/>
                             <constraint firstItem="Yb0-h6-ixF" firstAttribute="bottom" secondItem="8bC-Xf-vdC" secondAttribute="bottom" id="Q4C-ro-Bki"/>
+                            <constraint firstItem="Na9-2T-LdJ" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="QyB-7E-Vcd"/>
                             <constraint firstItem="Yb0-h6-ixF" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Swb-io-CDr"/>
+                            <constraint firstItem="Yb0-h6-ixF" firstAttribute="top" secondItem="ptW-i6-bK7" secondAttribute="bottom" id="WfQ-eL-icS"/>
                             <constraint firstItem="Yb0-h6-ixF" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="cCL-0P-yId"/>
                             <constraint firstItem="Na9-2T-LdJ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="cHL-0j-rFg"/>
                             <constraint firstItem="Na9-2T-LdJ" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.4" id="nLs-D2-Rkc"/>
+                            <constraint firstAttribute="trailing" secondItem="Na9-2T-LdJ" secondAttribute="trailing" constant="355.5" id="voR-4t-nPR"/>
                             <constraint firstItem="Na9-2T-LdJ" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="20" id="wfJ-Zj-yxl"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="QyB-7E-Vcd"/>
+                                <exclude reference="voR-4t-nPR"/>
+                                <exclude reference="KB7-12-nf5"/>
+                                <exclude reference="WfQ-eL-icS"/>
+                            </mask>
+                        </variation>
+                        <variation key="heightClass=compact">
+                            <mask key="constraints">
+                                <include reference="QyB-7E-Vcd"/>
+                                <exclude reference="cHL-0j-rFg"/>
+                                <include reference="voR-4t-nPR"/>
+                                <exclude reference="wfJ-Zj-yxl"/>
+                                <exclude reference="8XS-dE-8Y2"/>
+                                <include reference="KB7-12-nf5"/>
+                                <exclude reference="Swb-io-CDr"/>
+                                <include reference="WfQ-eL-icS"/>
+                                <exclude reference="cCL-0P-yId"/>
+                            </mask>
+                        </variation>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
